--- a/Data_analysis_and_results.ipynb
+++ b/Data_analysis_and_results.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/nelsonalbertohj/Magno-Parvo-CNN/blob/main/Data_analysis_and_results.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "collapsed": true,
         "pycharm": {
           "name": "#%% md\n"
@@ -165,7 +155,7 @@
         "    color_norm = normalize_img(data)\n",
         "    gray_img = tf.image.rgb_to_grayscale(data)\n",
         "    gray_norm_img = normalize_img(gray_img)\n",
-        "    tfa.image.gaussian_filter2d(gray_norm_img,filter_shape=(10,10),sigma=5.0)\n",
+        "    gray_norm_img = tfa.image.gaussian_filter2d(gray_norm_img,filter_shape=(10,10),sigma=5.0)\n",
         "    concat_img = tf.concat([color_norm, gray_norm_img],axis=-1)\n",
         "    return concat_img,label\n",
         "\n",
@@ -175,7 +165,7 @@
         "    color_norm = normalize_img(data)\n",
         "    gray_img = tf.image.rgb_to_grayscale(data)\n",
         "    gray_norm_img = normalize_img(gray_img)\n",
-        "    tfa.image.gaussian_filter2d(gray_norm_img,filter_shape=(10,10),sigma=5.0)\n",
+        "    #gray_norm_img = tfa.image.gaussian_filter2d(gray_norm_img,filter_shape=(10,10),sigma=5.0)\n",
         "    concat_img = tf.concat([color_norm, gray_norm_img],axis=-1)\n",
         "    return concat_img,label\n",
         "\n",
@@ -192,7 +182,7 @@
       "metadata": {
         "id": "nSpGGhvBh7JJ"
       },
-      "execution_count": 48,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -275,7 +265,7 @@
       "metadata": {
         "id": "IlfeXPqjAHRm"
       },
-      "execution_count": 57,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -284,13 +274,13 @@
         "print(classification_report(true_outputs,dual_pred_outputs))"
       ],
       "metadata": {
-        "id": "8xcRwMoHAKSs",
-        "outputId": "a0b79814-1f86-469e-e873-157ee0555059",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8xcRwMoHAKSs",
+        "outputId": "d2a28db7-e0ef-4b77-9eb2-aa0db8d5f897"
       },
-      "execution_count": 59,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,19 +329,19 @@
           "height": 778
         },
         "id": "nzxYDteEswKp",
-        "outputId": "7a99e014-e979-4de6-bba9-104f00e1f838"
+        "outputId": "19b15530-ae41-497b-faf2-237661bb3c18"
       },
-      "execution_count": 61,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f195bfa80d0>"
+              "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f18ea222050>"
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 73
         },
         {
           "output_type": "display_data",
@@ -373,13 +363,13 @@
         "print(classification_report(true_outputs,single_pred_outputs))"
       ],
       "metadata": {
-        "id": "U8PKYIjYAohB",
-        "outputId": "75a311e2-33ef-411b-a429-c4d8238c22c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U8PKYIjYAohB",
+        "outputId": "4ab382a7-12be-49e2-e6a2-3b3d91f19448"
       },
-      "execution_count": 60,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,11 +463,11 @@
         "single_test_loss, signle_test_accuracy = single_model.evaluate(test_ds_blurred)"
       ],
       "metadata": {
-        "id": "cPedRllo4iiU",
-        "outputId": "a94b9fce-47c3-4b0f-8c03-b936391c79dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cPedRllo4iiU",
+        "outputId": "a94b9fce-47c3-4b0f-8c03-b936391c79dc"
       },
       "execution_count": 51,
       "outputs": [
@@ -516,11 +506,11 @@
         "print(classification_report(true_outputs,dual_pred_outputs))"
       ],
       "metadata": {
-        "id": "GiQb02S_BRuB",
-        "outputId": "d424a724-2b9d-442c-c4cb-dc7a89b8eca7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GiQb02S_BRuB",
+        "outputId": "d424a724-2b9d-442c-c4cb-dc7a89b8eca7"
       },
       "execution_count": 64,
       "outputs": [
@@ -566,12 +556,12 @@
         "disp_cm.plot(ax=ax)"
       ],
       "metadata": {
-        "id": "4wW9yaRSBYo3",
-        "outputId": "fc159aac-d791-4734-c9d8-b9df9b593dbe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 778
-        }
+        },
+        "id": "4wW9yaRSBYo3",
+        "outputId": "fc159aac-d791-4734-c9d8-b9df9b593dbe"
       },
       "execution_count": 65,
       "outputs": [
@@ -605,11 +595,11 @@
         "print(classification_report(true_outputs,single_pred_outputs))"
       ],
       "metadata": {
-        "id": "f2DXwT5qBZMS",
-        "outputId": "226bbfe0-47dd-42b4-b18f-299f5f1960b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "f2DXwT5qBZMS",
+        "outputId": "226bbfe0-47dd-42b4-b18f-299f5f1960b3"
       },
       "execution_count": 66,
       "outputs": [
@@ -655,12 +645,12 @@
         "disp_cm.plot(ax=ax)"
       ],
       "metadata": {
-        "id": "6gRvSFYQBfcv",
-        "outputId": "6c0bdb20-ddd7-41cd-97b0-cc959ce8633e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 778
-        }
+        },
+        "id": "6gRvSFYQBfcv",
+        "outputId": "6c0bdb20-ddd7-41cd-97b0-cc959ce8633e"
       },
       "execution_count": 67,
       "outputs": [
@@ -709,8 +699,7 @@
     },
     "colab": {
       "name": "Data_analysis_and_results.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "accelerator": "GPU"
   },
