--- a/Magno_parvo_algorithms.ipynb
+++ b/Magno_parvo_algorithms.ipynb
@@ -17,7 +17,7 @@
       ],
       "metadata": {
         "id": "B8jN2PimUzk6",
-        "outputId": "ff6dad0a-59c5-4072-d9c0-568eede1bd1f",
+        "outputId": "e9236bbb-60dc-48ae-ee87-dfacb6af41df",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -31,7 +31,7 @@
           "text": [
             "Collecting tensorflow_addons\n",
             "  Downloading tensorflow_addons-0.16.1-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (1.1 MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.1 MB 5.3 MB/s \n",
+            "\u001b[?25l\r\u001b[K     |▎                               | 10 kB 28.1 MB/s eta 0:00:01\r\u001b[K     |▋                               | 20 kB 18.2 MB/s eta 0:00:01\r\u001b[K     |▉                               | 30 kB 14.3 MB/s eta 0:00:01\r\u001b[K     |█▏                              | 40 kB 13.2 MB/s eta 0:00:01\r\u001b[K     |█▌                              | 51 kB 6.6 MB/s eta 0:00:01\r\u001b[K     |█▊                              | 61 kB 7.8 MB/s eta 0:00:01\r\u001b[K     |██                              | 71 kB 8.2 MB/s eta 0:00:01\r\u001b[K     |██▍                             | 81 kB 8.0 MB/s eta 0:00:01\r\u001b[K     |██▋                             | 92 kB 8.8 MB/s eta 0:00:01\r\u001b[K     |███                             | 102 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███▏                            | 112 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███▌                            | 122 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███▉                            | 133 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████                            | 143 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████▍                           | 153 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████▊                           | 163 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████                           | 174 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████▎                          | 184 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████▌                          | 194 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████▉                          | 204 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████▏                         | 215 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████▍                         | 225 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████▊                         | 235 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████                         | 245 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████▎                        | 256 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████▋                        | 266 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████▉                        | 276 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████▏                       | 286 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████▌                       | 296 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████▊                       | 307 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████                       | 317 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████▍                      | 327 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████▋                      | 337 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████                      | 348 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████▏                     | 358 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████▌                     | 368 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████▉                     | 378 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████                     | 389 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████▍                    | 399 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████▊                    | 409 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████                    | 419 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████▎                   | 430 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████▌                   | 440 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████▉                   | 450 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████▏                  | 460 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████▍                  | 471 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████▊                  | 481 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 491 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████▎                 | 501 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████▋                 | 512 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████▉                 | 522 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████▏                | 532 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████▌                | 542 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 552 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████                | 563 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████▍               | 573 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████▋               | 583 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 593 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████▏              | 604 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████▌              | 614 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████▉              | 624 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████              | 634 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████▍             | 645 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████▊             | 655 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 665 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████▎            | 675 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████▌            | 686 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████▉            | 696 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████▏           | 706 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████▍           | 716 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████▊           | 727 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 737 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▎          | 747 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▋          | 757 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▉          | 768 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▏         | 778 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▌         | 788 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▊         | 798 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 808 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 819 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▋        | 829 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 839 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▏       | 849 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▌       | 860 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▉       | 870 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 880 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▍      | 890 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▊      | 901 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 911 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▎     | 921 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▌     | 931 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▉     | 942 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▏    | 952 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▍    | 962 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▊    | 972 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 983 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▎   | 993 kB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 1.0 MB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▉   | 1.0 MB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▏  | 1.0 MB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▌  | 1.0 MB 7.4 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▊  | 1.0 MB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 1.1 MB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▍ | 1.1 MB 7.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▋ | 1.1 MB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████ | 1.1 MB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 1.1 MB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▌| 1.1 MB 7.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▉| 1.1 MB 7.4 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 1.1 MB 7.4 MB/s \n",
             "\u001b[?25hRequirement already satisfied: typeguard>=2.7 in /usr/local/lib/python3.7/dist-packages (from tensorflow_addons) (2.7.1)\n",
             "Installing collected packages: tensorflow-addons\n",
             "Successfully installed tensorflow-addons-0.16.1\n"
@@ -49,7 +49,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "273e5c47",
-        "outputId": "e358eaf2-76ff-48b3-a747-cffee28d4c5f"
+        "outputId": "756a4184-5525-4ac0-f94b-6d62e9b078b3"
       },
       "outputs": [
         {
@@ -89,7 +89,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FTxP_p0fZrGX",
-        "outputId": "09cd9576-7944-4396-c997-c572ace0174d"
+        "outputId": "88288a28-addc-4c33-b573-b645966eb5c2"
       },
       "id": "FTxP_p0fZrGX",
       "execution_count": 3,
@@ -112,7 +112,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "61f265cf",
-        "outputId": "5b7250db-364d-43b0-c55f-2c7ec1d01201"
+        "outputId": "75cac12f-8415-476d-e8d0-f5abdc36152d"
       },
       "outputs": [
         {
@@ -202,7 +202,7 @@
         "outputId": "f3500808-1687-47b6-fbe8-03badc2beb4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 796
+          "height": 814
         }
       },
       "id": "X7cRFBywFpP8",
@@ -440,7 +440,7 @@
         "id": "PVDAyYHHiwX8"
       },
       "id": "PVDAyYHHiwX8",
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -456,13 +456,13 @@
         "id": "nrmij0NKjg0Z"
       },
       "id": "nrmij0NKjg0Z",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model_save_loc = \"/content/drive/MyDrive/Vision Dataset/Models/\"\n",
+        "model_save_loc = \"/content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Vision Dataset/Models/\"\n",
         "model_name = \"Dualstream_with_ResNet_1000_Samples_Deeper_10Classes/\"\n",
         "checkpoint_path = f\"{model_save_loc}{model_name}\"\n",
         "callback = tf.keras.callbacks.EarlyStopping(monitor='val_accuracy', patience=20, restore_best_weights=True)\n",
@@ -493,57 +493,28 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "RAojac_FjiHf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7c4ebcc0-4b82-4945-c24f-ac40dca669c3"
+        "id": "RAojac_FjiHf"
       },
       "id": "RAojac_FjiHf",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/60\n",
-            "193/328 [================>.............] - ETA: 1:24 - loss: 0.2453 - accuracy: 0.9482"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "model_save_loc = \"/content/drive/MyDrive/School/MIT Spring2022/9.60/Vision Project/Vision Dataset/Models/\"\n",
+        "model_name = \"Dualstream_with_ResNet_1000_Samples_Deeper_10Classes/\"\n",
+        "checkpoint_path = f\"{model_save_loc}{model_name}\"\n",
         "#Load Model:\n",
-        "dual_stream_model = tf.keras.models.load_model(\"/content/drive/MyDrive/Vision Dataset/Models\")\n",
+        "dual_stream_model = tf.keras.models.load_model(checkpoint_path)\n",
         "# eval_loss, eval_accuracy = dual_stream_model.evaluate(val_ds_preprocessed)\n"
       ],
       "metadata": {
-        "id": "DgvAWYPbviCb",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 346
-        },
-        "outputId": "4a140fd3-1762-4b13-b3c1-1eb083cfa0bb"
+        "id": "DgvAWYPbviCb"
       },
       "id": "DgvAWYPbviCb",
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "OSError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-14-23750140323e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Load Model:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdual_stream_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/content/drive/MyDrive/Vision Dataset/Models\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# eval_loss, eval_accuracy = dual_stream_model.evaluate(val_ds_preprocessed)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint: disable=broad-except\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m       \u001b[0mfiltered_tb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m       \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/saved_model/loader_impl.py\u001b[0m in \u001b[0;36mparse_saved_model\u001b[0;34m(export_dir)\u001b[0m\n\u001b[1;32m    114\u001b[0m   \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m     raise IOError(\n\u001b[0;32m--> 116\u001b[0;31m         \u001b[0;34mf\"SavedModel file does not exist at: {export_dir}{os.path.sep}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    117\u001b[0m         \u001b[0;34mf\"{{{constants.SAVED_MODEL_FILENAME_PBTXT}|\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    118\u001b[0m         f\"{constants.SAVED_MODEL_FILENAME_PB}}}\")\n",
-            "\u001b[0;31mOSError\u001b[0m: SavedModel file does not exist at: /content/drive/MyDrive/Vision Dataset/Models/{saved_model.pbtxt|saved_model.pb}"
-          ]
-        }
-      ]
+      "execution_count": 8,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
